Authentication set up, dashboard too

--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,17 @@
     "frameworksBackend": {
       "region": "us-west1"
     }
-  }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ]
+    }
+  ]
 }
