--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"type": "module",
 	"dependencies": {
 		"bootstrap": "^5.3.3",
-		"firebase": "^10.9.0"
+		"firebase": "^10.9.0",
+		"mathjax": "^3.2.2"
 	}
 }
