--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.7",
 		"vite": "^5.1.6"
 	},
 	"type": "module",
 	"dependencies": {
 		"bootstrap": "^5.3.3",
 		"firebase": "^10.9.0",
+		"firebase-tools": "^13.5.2",
 		"mathjax": "^3.2.2"
 	}
 }
