--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 	"dependencies": {
 		"bootstrap": "^5.3.3",
 		"firebase": "^10.9.0",
-		"firebase-tools": "^13.5.2",
-		"mathjax": "^3.2.2"
+		"firebase-tools": "^13.5.2"
 	}
 }
