--- a/functions/CompileAPI/Dockerfile
+++ b/functions/CompileAPI/Dockerfile
@@ -1,13 +1,15 @@
 FROM ubuntu
 
-WORKDIR /CompileAPI
-
+WORKDIR /CompileAPI/
+COPY . .
+CMD ["ls"]
 #Install Lean4 on the container.
-RUN apt-get update
-RUN apt-get install -y curl
-RUN apt-get install -y wget
-RUN apt-get -y install sudo
-RUN useradd -m docker && echo "docker:docker" | chpasswd && adduser docker sudo
-USER docker
-RUN wget -q https://raw.githubusercontent.com/leanprover-community/mathlib4/master/scripts/install_debian.sh && bash install_debian.sh ; rm -f install_debian.sh && source ~/.profile
-RUN exec bash
+#RUN apt-get update
+#RUN apt-get install -y curl
+#RUN apt-get install -y wget
+#RUN apt-get -y install sudo
+#RUN apt-get -y install python3.9
+#RUN useradd -m docker && echo "docker:docker" | chpasswd && adduser docker sudo
+#USER docker
+#RUN exec bash
+#CMD ["python3","/temp/main.py"]
